--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "prettier": "^3.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "volta": {
+    "node": "20.9.0",
+    "pnpm": "8.10.5"
   }
 }
